--- a/assets/css/footerMedia.css
+++ b/assets/css/footerMedia.css
@@ -1,45 +1,50 @@
-@media (max-width: 767px) {
+@media (max-width: 1100px) {
   .footer {
-    padding-top: 53px;
+    padding-top: 68px;
     height: 744px;
   }
   .footer__main-grid {
     height: 551px;
-    /* display: grid; */
     grid-template-columns: 1fr 200px 1fr;
-    grid-template-rows: 40px 35% 40px 60px 1fr;
+    grid-template-rows: 57px 31% 40px 77px 1fr;
     gap: 10px;
     row-gap: 20px;
   }
 
   .footer__logo {
+    margin-top:  -12px;
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 2;
   }
 
   .footer__social-links {
     grid-column-start: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    justify-self: end;
-    align-self: center;
+          justify-self: end;
+          align-self: start;
+    flex-wrap: wrap;
+    padding: 0;
   }
 
   .footer__menu-list-basic {
     grid-column-start: 1;
     grid-row-start: 2;
     grid-row-end: 3;
+    justify-self: start;
   }
 
   .footer__menu-list-auxiliary {
     grid-column-start: 2;
     grid-row-start: 2;
     grid-row-end: 3;
+    justify-self: start;
+    padding-left: 0;
   }
 
   .footer__recommendation-text {
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
     align-self: end;
@@ -68,19 +73,16 @@
   }
 
   .footer__contacts-text {
-    /* margin: 0; */
     grid-row-start: 2;
     grid-column-start: 1;
   }
 
   .footer__contacts-work {
-    /* margin: 0; */
     grid-row-start: 3;
     grid-column-start: 1;
   }
 
   .footer__contacts-email-text {
-    /* margin: 0; */
     grid-row-start: 2;
     grid-column-start: 2;
   }
@@ -91,21 +93,27 @@
     padding-top: 44px;
     height: 988px;
   }
-
+  .footer__logo {
+    margin-top: 1px;
+  }
+  .footer__logo-img {
+    width: 146px;
+    height: 47px;
+}
   .footer__main-grid {
-    height: 800px;
-    /* display: grid; */
+    min-height: 849px;
     grid-template-columns: 1fr;
-    grid-template-rows: 40px 19% 21% 40px 60px 60px 60px 60px;
+    grid-template-rows: 40px 17% 20% 71px 67px 151px 60px;
     gap: 10px;
-    row-gap: 20px;
+    row-gap: 18px;
+    column-gap: 0;
+    margin-bottom: 17px;
   }
 
   .footer__social-links {
     grid-column-start: 1;
-    grid-row-start: -2;
-    grid-row-end: -1;
-    /* grid-row-end: 3; */
+    grid-row-start: 7;
+    grid-row-end: 8;
     justify-self: start;
     align-self: center;
   }
@@ -116,12 +124,13 @@
 
   .footer__menu-list-basic {
     grid-row-start: 2;
+    align-self: end;
   }
 
   .footer__menu-list-auxiliary {
     grid-row-start: 3;
     grid-column-start: 1;
-    /* grid-row-end: 5; */
+    align-self: end;
   }
 
   .footer__recommendation-text {
@@ -156,10 +165,11 @@
   .footer__footer {
     flex-direction: column;
     position: relative;
+    min-height: 68px;
   }
   .footer__link-privacyPolicy {
     position: absolute;
-    top: -25px;
+    top: -61px;
     left: 0;
   }
 }
