--- a/index.css
+++ b/index.css
@@ -2,19 +2,31 @@
 @import './assets/css/fonts.css';
 @import './assets/css/variables.css';
 @import './assets/css/default.css';
+@import './assets/css/defaultMedia.css';
 @import './assets/css/header.css';
 @import './assets/css/headerMedia.css';
 @import './assets/css/hero.css';
 @import './assets/css/heroMedia.css';
 @import './assets/css/workExample.css';
 @import './assets/css/workExampleMedia.css';
-@import './assets/css/readyKitchen.css';
-@import './assets/css/readyKitchenMedia.css';
-@import './assets/css/aboutUs.css';
-@import './assets/css/aboutUsMedia.css';
+@import './assets/css/ready-kitchen.css';
+@import './assets/css/ready-kitchenMedia.css';
+@import './assets/css/about.css';
+@import './assets/css/aboutMedia.css';
 @import './assets/css/blog.css';
 @import './assets/css/blogMedia.css';
-@import './assets/css/menu.css';
-@import './assets/css/menuMedia.css';
+@import './assets/css/salons.css';
 @import './assets/css/footer.css';
 @import './assets/css/footerMedia.css';
+@import './assets/css/menu.css';
+@import './assets/css/menuMedia.css';
+@import './assets/css/popup.css';
+@import './assets/css/product.css';
+@import './assets/css/productMedia.css';
+@import './assets/css/carousel.css';
+@import './assets/css/carouselMedia.css';
+@import './assets/css/card.css';
+@import './assets/css/cardMedia.css';
+@import './assets/css/favorite.css';
+@import './assets/css/similar.css';
+@import './assets/css/similarMedia.css';
