--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,10 @@
+.header{
+  position: relative;
+  z-index: 4;
+}
+.header__menu-burger{
+  display: none;
+}
 .header__menu {
   height: 43px;
   width: 100%;
@@ -6,8 +13,8 @@
 .icon-search{
   display: none;
 }
-.header__container-menu {
-  height: 43px;
+.header__menu-container {
+  min-height: 43px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -76,16 +83,16 @@
   line-height: 16.94px;
 }
 
-/* header-main */
 .header__main {
-  height: 76px;
+  min-height: 76px;
   position: relative;
 }
 
-.header__container-main {
+.header__main-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--white);
 }
 
 .header__main-search-content {
@@ -95,25 +102,17 @@
   width: 100%;
 }
 
-.img-logo {
+.header__logo {
   width: 158.73px;
   height: 29px;
   margin-right: 14.27px;
 }
 
-.button {
-  height: 48px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-}
-
 .header__button-menu {
-  width: 119px;
-  background-color: var(--black);
-  color: var(--white);
+  height: 48px;
   margin-right: 16px;
+  padding-inline: 28px;
+  font-size: 16px;
 }
 
 .img-button {
@@ -122,20 +121,17 @@
   margin-right: 7px;
 }
 
-.button-text {
-  font-size: 16px;
-  line-height: 19.36px;
-}
-
 .input {
   height: 48px;
   border-radius: 10px;
   border: 1px solid var(--grey-dark);
   padding-left: 30px;
 }
+
 .wrapper_iconSearch{
   display: none;
 }
+
 .input-header {
   width: 52%;
   background-color: var(--grey-light);
@@ -159,11 +155,15 @@
 }
 
 .img-heart {
+  display: inline-block;
   width: 20px;
   height: 20px;
 }
 
-.button-favorites {
+.header__favorites {
+  display: flex;
+  align-items: center;
+  gap: 5px;
   margin-right: 31px;
 }
 
@@ -175,7 +175,5 @@
 }
 
 .img-chat {
-  width: 18px;
-  height: 18px;
   margin-right: 4px;
 }
