--- a/assets/css/heroMedia.css
+++ b/assets/css/heroMedia.css
@@ -1,36 +1,30 @@
-@media (max-width: 760px) {
-  .hero__content {
-    min-height: 358px;
-    max-width: 727px;
-    padding: 94px 14px 60px;
-  }
+@media (max-width: 1100px) {
+
 
   .hero__title {
-    font-weight: 500;
+    margin-bottom: 8px;
     font-size: 36px;
-    line-height: 43.57px;
-    letter-spacing: -0.8px;
-    margin-bottom: 7px;
+    line-height: 44px;
   }
 
   .hero__service-list {
     font-weight: 400;
     font-size: 16px;
-    line-height: 19.36px;
-    letter-spacing: -0.8px;
+    line-height: 18px;
     margin-bottom: 29px;
   }
 
-  .hero__button {
-    width: 170px;
-    height: 49px;
+}
+
+@media (max-width: 767px) {
+  .hero__content {
+    min-height: 358px;
+    max-width: 728px;
+    padding: 94px 14px 60px;
   }
 }
 
 @media (max-width: 430px) {
-  .hero__container {
-    height: 980px;
-  }
 
   .hero__content {
     position: relative;
@@ -57,11 +51,15 @@
     bottom: -60px;
     left: 0;
     width: 100%;
-    background-color: var(--black);
   }
 
-  .carousel__card {
+  .hero__container>.carousel {
+    height: 217px;
+  }
+
+  .category.hero--category {
     width: 361px;
+    height: 217px;
   }
 
   .carousel__card:not(:last-child) {
