--- a/assets/css/workExample.css
+++ b/assets/css/workExample.css
@@ -1,104 +1,29 @@
-.workExamples {
-  margin-bottom: 76px;
+.work-examples:not(:first-of-type) {
+  padding-top: 93px;
 }
 
-.workExamples__container {
+.work-examples__container {
   display: flex;
   flex-direction: column;
 }
 
-.workExamples__title {
-  font-weight: 500;
+.work-examples__title {
   font-size: 40px;
-  line-height: 48.41px;
-  margin-bottom: 31px;
+  font-weight: 500;
+  line-height: 48px;
+  margin-bottom: 18px;
 }
 
-.workExamples__cards {
+.work-examples__cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 500px);
+  grid-template-rows: repeat(2, auto);
   gap: 20px;
   margin-bottom: 22px;
 }
 
-.workExamples__card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  max-width: 650px;
-  height: 472px;
-  padding: 11px 11px 23px 11px;
-  background-color: var(--grey-light);
-  border-radius: 20px;
-}
-
-.workExamples__card::before {
-  content: '-21%';
-  position: absolute;
-  width: 53px;
-  height: 27px;
-  color: var(--white);
-  background-color: var(--red);
-  left: 22px;
-  top: 21px;
-  border-radius: 37px;
-  padding: 5px 8px;
-}
-
-.workExamples__card-img {
-  margin-bottom: 22px;
-}
-
-.workExamples__card-description {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29.05px;
-  color: var(--black);
-  margin-bottom: 46px;
-}
-
-.workExamples__card-pricing {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.workExamples__card-buttons {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.cost__block-desc {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16.94px;
-}
-
-.cost__block-text {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29.05px;
-}
-
-.workExamples__calculate {
+.work-examples__button {
   width: 203px;
   height: 48px;
-  background-color: var(--black);
-  color: var(--white);
-  margin-right: 6px;
-}
-
-.workExamples__order {
-  width: 169px;
-  height: 48px;
-  border: 1px solid var(--gray-silver);
-}
-
-.workExamples__button {
-  width: 203px;
-  height: 48px;
-  background-color: var(--red);
-  color: var(--white);
   align-self: end;
 }
