feat: add about-us page (desktop)

--- a/index.css
+++ b/index.css
@@ -30,3 +30,9 @@
 @import './assets/css/favorite.css';
 @import './assets/css/similar.css';
 @import './assets/css/similarMedia.css';
+@import './assets/css/intro.css';
+@import './assets/css/introMedia.css';
+@import './assets/css/team.css';
+@import './assets/css/teamMedia.css';
+@import './assets/css/awards.css';
+@import './assets/css/awardsMedia.css';
