--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -45,8 +45,16 @@
 
 .about__slogan-item {
   position: relative;
-  padding-right: 20px;
-  padding-left: 134px;
+  padding-right: 30px;
+  padding-left: 117px;
+}
+
+.about__slogan-item:last-child {
+  padding-right: 0;
+}
+
+.about__slogan-item:first-child {
+  padding-left: 114px;
 }
 
 .about__slogan-item:not(:last-child) {
@@ -56,7 +64,6 @@
 .about__slogan-item::before {
   position: absolute;
   top: 38%;
-  left: 1rem;
   display: block;
   font-weight: 900;
   font-size: 64px;
@@ -64,15 +71,20 @@
   content: "0"counter(section)".";
 }
 
-.about__slogan-item:first-child::before {
+.about__slogan-item:nth-child(1)::before,
+.about__slogan-item:nth-child(2)::before {
   left: 0;
+}
+.about__slogan-item:nth-child(3)::before {
+  left: -1rem;
 }
 
 .about__slogan-title {
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
+  letter-spacing: -0.8px;
 }
 
 .about__slogan-description {
