--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -74,8 +74,9 @@ section:last-of-type {
   border-radius: 10px;
   padding-block: 14px;
   padding-inline: 36px;
-  background-color: var(--red);
+  font-size: 16px;
   color: var(--white);
+  background-color: var(--red);
   transition: background-color 0.2s ease;
 }
 
