--- a/assets/css/blogMedia.css
+++ b/assets/css/blogMedia.css
@@ -12,6 +12,9 @@
     width: 50%;
     padding: 10px 19px 10px 10px;
   }
+  .blog__card img {
+    width: 100%;
+  }
 }
 @media (max-width: 430px) {
   .blog:not(:first-of-type) {
