--- a/assets/css/heroMedia.css
+++ b/assets/css/heroMedia.css
@@ -1,6 +1,4 @@
 @media (max-width: 1100px) {
-
-
   .hero__title {
     margin-bottom: 8px;
     font-size: 36px;
@@ -25,7 +23,6 @@
 }
 
 @media (max-width: 430px) {
-
   .hero__content {
     position: relative;
     height: 622px;
@@ -40,6 +37,9 @@
 
   .hero__title {
     margin-bottom: 20px;
+    text-transform: none;
+    line-height: 38px;
+    letter-spacing: 0;
   }
 
   .hero__service-list {
@@ -51,6 +51,11 @@
     bottom: -60px;
     left: 0;
     width: 100%;
+    background-color: var(--black);
+  }
+
+  .hero__button:hover {
+    background-color: var(--black-light);
   }
 
   .hero__container>.carousel {
@@ -64,5 +69,10 @@
 
   .carousel__card:not(:last-child) {
     margin-right: 11px;
+  }
+
+  .hero .category__button {
+    bottom: 16px;
+    left: 13px;
   }
 }
