--- a/assets/css/workExampleMedia.css
+++ b/assets/css/workExampleMedia.css
@@ -37,6 +37,7 @@
     overflow: hidden;
     width: 100%;
     height: 596px;
+    margin-bottom: 10px;
   }
   .work-examples__title {
     margin-bottom: 20px;
