--- a/assets/css/aboutMedia.css
+++ b/assets/css/aboutMedia.css
@@ -1,17 +1,3 @@
-@media (max-width: 1024px) {
-  .about:not(:first-of-type) {
-    padding-top: 20px;
-}
-  .about__slogan-item {
-    padding-left: 82px;
-  }
-
-  .about__slogan-item::before {
-    left: 0.5rem;
-    font-size: 40px;
-  }
-}
-
 @media (max-width: 1100px) {
   .about__image {
     max-width: 1100px;
@@ -64,12 +50,7 @@
     left: 0;
 }
   .about__slogan-item {
-    padding-left: 134px;
-  }
-
-  .about__slogan-item::before {
-    left: 1rem;
-    font-size: 64px;
+    padding-left: 124px !important;
   }
 
   .about__slogan-description {
@@ -78,29 +59,43 @@
 }
 
 @media (max-width: 430px) {
-  .about:not(:first-of-type) {
+  .about {
     padding-top: 52px;
 }
-.about__main{
-  margin-bottom: 0;
-}
+  .about__main{
+    margin-bottom: 0;
+  }
   .about__logo {
     position: static;
     max-width: 210px;
   }
 
-  .about__slogan-item {
-    padding-right: 0;
+  .about__image {
+    padding-top: 16px;
   }
 
-  .about__slogan-item:first-child {
-    padding-bottom: 21px;
+  .about__slogans-list {
+    margin-top: 8px;
+  }
+
+  .about__slogan-item {
+    padding-left: 104px !important;
+    padding-block: 26px;
+  }
+
+  .about__slogan-item:nth-child(2)::before,
+  .about__slogan-item:nth-child(3)::before {
+    left: -5px;
   }
 
   .about__slogan-title {
     font-size: 20px;
     line-height: 14px;
     letter-spacing: -0.5px;
+  }
+
+  .about__tagline {
+    line-height: 17.5px;
   }
 
   .about__slogan-description {
