--- a/assets/css/blogMedia.css
+++ b/assets/css/blogMedia.css
@@ -1,5 +1,5 @@
 @media (max-width: 1100px) {
-  .blog:not(:first-of-type) {
+  .blog {
     padding-top: 30px;
 }
   .blog__card:nth-child(1){
@@ -17,7 +17,7 @@
   }
 }
 @media (max-width: 430px) {
-  .blog:not(:first-of-type) {
+  .blog{
     padding-top: 3px;
 }
 .blog__title {
