--- a/assets/css/ready-kitchenMedia.css
+++ b/assets/css/ready-kitchenMedia.css
@@ -1,5 +1,5 @@
 @media (max-width: 1100px) {
-  .ready-kitchen:not(:first-of-type) {
+  .ready-kitchen {
     padding-top: 93px;
   }
 
@@ -25,7 +25,7 @@
 }
 
 @media (max-width: 430px) {
-  .ready-kitchen:not(:first-of-type) {
+  .ready-kitchen {
     padding-top: 51px;
   }
 
