--- a/assets/css/workExampleMedia.css
+++ b/assets/css/workExampleMedia.css
@@ -1,5 +1,5 @@
 @media (max-width: 1100px) {
-  .work-examples:not(:first-of-type) {
+  .work-examples{
     padding-top: 58px;
 }
   .work-examples__cards {
@@ -28,7 +28,7 @@
   }
 }
 @media (max-width: 430px) {
-  .work-examples:not(:first-of-type) {
+  .work-examples {
     padding-top: 53px;
 }
 
