--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -15,6 +15,7 @@
   --grey-dull: rgba(139, 139, 139, 1);
   --grey-dull-weak: rgba(138, 138, 138, 1);
   --grey-stone: rgba(137, 137, 137, 1);
+  --grey-yellow: rgba(123, 123, 123, 1);
   --gray-charcoal: rgba(96, 96, 96, 1);
   --black-oil: rgba(83, 83, 83, 1);
   --black-light: rgba(86, 86, 86, 1);
