--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -3,6 +3,7 @@
   font-weight: 500;
   line-height: 48px;
   color: var(--black);
+  letter-spacing: -0.8px;
 }
 
 .team__main {
@@ -17,6 +18,13 @@
   width: 32.5%;
 }
 
+.team__leader-image {
+  width: 100%;
+  height: 474px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
 .team__leader-name {
   position: absolute;
   top: 0;
@@ -26,6 +34,7 @@
   font-weight: 500;
   line-height: 48px;
   color: var(--black);
+  letter-spacing: -0.8px;
 }
 
 .team__leader-post {
@@ -35,13 +44,6 @@
   translate: 100% 0;
   font-size: 16px;
   color: var(--grey-stone);
-}
-
-.team__leader-image {
-  width: 100%;
-  height: 474px;
-  object-fit: cover;
-  border-radius: 20px;
 }
 
 .team__description {
