feat: add contacts

--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@
 @import './assets/css/filter.css';
 @import './assets/css/popup.css';
 @import './assets/css/product.css';
+@import './assets/css/contacts.css';
 @import './assets/css/productMedia.css';
 @import './assets/css/carousel.css';
 @import './assets/css/carouselMedia.css';
