--- a/assets/css/salons.css
+++ b/assets/css/salons.css
@@ -42,7 +42,6 @@
 .text-field-name,
 .text-field-salons {
   max-width: 364px;
-
 }
 
 .text-field-name {
@@ -74,26 +73,26 @@
   border-radius: 10px;
 }
 
-.map-responsive{
-  overflow:hidden;
+.map-responsive {
+  overflow: hidden;
   padding-bottom: 31.8%;
-  position:relative;
-  height:0;
+  position: relative;
+  height: 0;
   border-radius: 10px;
   margin-bottom: 107px;
 }
 
-.map-responsive iframe{
-  left:0;
-  top:0;
+.map-responsive iframe {
+  left: 0;
+  top: 0;
   height: 100%;
-  width:100%;
-  position:absolute;
+  width: 100%;
+  position: absolute;
 
 }
 
-  .salons__button {
-    margin-bottom: 25px;
+.salons__button {
+  margin-bottom: 25px;
 }
 
 .text-warning {
@@ -103,18 +102,21 @@
 @media (max-width: 1100px) {
   .salons {
     padding-top: 68px;
-}
-.salons:last-of-type {
-  padding-bottom: 50px;
-}
+  }
+
+  .salons:last-of-type {
+    padding-bottom: 50px;
+  }
 
   .salons__entry {
     flex-direction: column;
   }
+
   .map-responsive {
     min-height: 386px;
     margin-bottom: 69px;
-}
+  }
+
   .form {
     width: 100%;
   }
@@ -128,6 +130,12 @@
     display: none;
   }
 
+  .text-field-salons,
+  .text-field-name,
+  .text-field-phone {
+    max-width: 100%;
+  }
+
   .salons__title {
     font-size: 36px;
     line-height: 43.57px;
@@ -138,11 +146,12 @@
 @media (max-width: 430px) {
   .salons {
     padding-top: 56px;
-}
+  }
 
-  .salons:last-of-type{
+  .salons:last-of-type {
     padding-bottom: 43px;
-      }
+  }
+
   .salons__entry {
     margin-bottom: 43px;
   }
@@ -158,11 +167,6 @@
   .map-responsive {
     min-height: 414px;
     margin-bottom: 56px;
-  }
-
-  .text-field-name,
-  .text-field-salons {
-    max-width: 100%;
   }
 
   .salons__entry-text-wrap {
@@ -188,7 +192,8 @@
     display: block;
     color: var(--grey-dull-weak)
   }
-  .text-warning > span{
+
+  .text-warning>span {
     border-bottom: 1px var(--grey-dull-weak) solid;
   }
 }
