fix: edit awards section at about-us page (adaptive)

--- a/assets/css/awards.css
+++ b/assets/css/awards.css
@@ -18,7 +18,7 @@
 .awards__top-image img {
   position: absolute;
   top: -60px;
-  left: 146px;
+  left: 30%;
   width: 220px;
   height: 210px;
 }
