feat: collect about contacts and product

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@
 @import './assets/css/carouselMedia.css';
 @import './assets/css/card.css';
 @import './assets/css/cardMedia.css';
+@import './assets/css/contacts.css';
 @import './assets/css/favorite.css';
 @import './assets/css/similar.css';
 @import './assets/css/similarMedia.css';
