feat: add sales page

--- a/index.css
+++ b/index.css
@@ -37,3 +37,6 @@
 @import './assets/css/teamMedia.css';
 @import './assets/css/awards.css';
 @import './assets/css/awardsMedia.css';
+@import './assets/css/sale.css';
+@import './assets/css/saleMedia.css';
+@import './assets/css/pagination.css';
