--- a/assets/css/cardMedia.css
+++ b/assets/css/cardMedia.css
@@ -11,6 +11,11 @@
     display: none;
   } */
 
+  .card__sale,
+  .card__stock {
+    font-size: 13px;
+  }
+
   .card__buttons {
     display: none;
   }
