--- a/assets/css/introMedia.css
+++ b/assets/css/introMedia.css
@@ -8,14 +8,22 @@
   }
 }
 
+@media (max-width: 630px) {
+  .intro__banner {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 38px 8px 18px 26px;
+  }
+
+  .intro__logo {
+    align-self: flex-end;
+    margin-top: auto;
+  }
+}
+
 @media (max-width: 430px) {
   .intro {
     margin-top: 15px;
-  }
-
-  .intro__banner {
-    align-items: flex-start;
-    padding: 38px 8px 18px 26px;
   }
 
   .intro__title {
@@ -24,6 +32,5 @@
 
   .intro__logo {
     width: 250px;
-    margin-top: auto;
   }
 }
