feat: add materials and components page materials.html

--- a/index.css
+++ b/index.css
@@ -37,3 +37,5 @@
 @import './assets/css/teamMedia.css';
 @import './assets/css/awards.css';
 @import './assets/css/awardsMedia.css';
+@import './assets/css/materials.css';
+@import './assets/css/materialsMedia.css';
