--- a/index.css
+++ b/index.css
@@ -34,6 +34,8 @@
 @import './assets/css/similarMedia.css';
 @import './assets/css/intro.css';
 @import './assets/css/introMedia.css';
+@import './assets/css/reviews.css';
+@import './assets/css/reviewsMedia.css';
 @import './assets/css/team.css';
 @import './assets/css/teamMedia.css';
 @import './assets/css/awards.css';
