feat: add tables page tables.html

--- a/index.css
+++ b/index.css
@@ -37,3 +37,5 @@
 @import './assets/css/teamMedia.css';
 @import './assets/css/awards.css';
 @import './assets/css/awardsMedia.css';
+@import './assets/css/tables.css';
+@import './assets/css/tablesMedia.css';
