--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -25,5 +25,6 @@
   --red-dark: rgba(169, 24, 24, 1);
   --creamy:  rgba(240, 236, 231, 1);
   --creamy-beige:  rgba(245, 229, 213, 1);
+  --yellow:  #FFB834;
 
 }
