--- a/index.css
+++ b/index.css
@@ -40,5 +40,8 @@
 @import './assets/css/teamMedia.css';
 @import './assets/css/awards.css';
 @import './assets/css/awardsMedia.css';
+@import './assets/css/sale.css';
+@import './assets/css/saleMedia.css';
+@import './assets/css/pagination.css';
 @import './assets/css/tables.css';
 @import './assets/css/tablesMedia.css';
