--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -55,3 +55,11 @@
   padding-inline: 39px;
   font-size: 16px;
 }
+
+.carousel__image-hero{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
