--- a/assets/css/workExample.css
+++ b/assets/css/workExample.css
@@ -3,8 +3,8 @@
 }
 
 .work-examples__container {
-  /* display: flex; */
-  /* flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 .work-examples__title {
@@ -13,29 +13,16 @@
   line-height: 48px;
   margin-bottom: 18px;
 }
-.swiper_example{
-  margin-left: auto;
-margin-right: auto;
-position: relative;
-overflow: hidden;
-list-style: none;
-padding: 0;
-z-index: 1;
-display: block;
-}
 
 .work-examples__cards{
   height: 950px;
 }
-.swiper-slide-card {
-  overflow: hidden;
-  height: calc((100% - 30px) / 2);
-}
+
 .work-examples__cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
-  /* gap: 20px; */
+  gap: 20px;
   margin-bottom: 22px;
 }
 
