--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@
 @import './assets/css/awardsMedia.css';
 @import './assets/css/sale.css';
 @import './assets/css/saleMedia.css';
+@import './assets/css/credit.css';
 @import './assets/css/pagination.css';
 @import './assets/css/tables.css';
 @import './assets/css/tablesMedia.css';
