--- a/index.css
+++ b/index.css
@@ -43,6 +43,8 @@
 @import './assets/css/sale.css';
 @import './assets/css/saleMedia.css';
 @import './assets/css/credit.css';
+@import './assets/css/questions.css';
+@import './assets/css/questionsMedia.css';
 @import './assets/css/pagination.css';
 @import './assets/css/tables.css';
 @import './assets/css/tablesMedia.css';
