--- a/assets/css/favorite.css
+++ b/assets/css/favorite.css
@@ -1,4 +1,7 @@
 .favorite {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 36px;
   height: 36px;
   font-size: 20px;
