--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -15,8 +15,8 @@
 
 .product__title {
   font-size: 32px;
-  font-weight: normal;
-  line-height: normal;
+  font-weight: 500;
+  line-height: 39px;
 }
 
 .product__photos {
@@ -31,9 +31,17 @@
   position: relative;
 }
 
+.slider__showcase img {
+  width: 100%;
+  max-height: 650px;
+}
+
 .slider__button {
   position: absolute;
-  top: calc(50% - 21px);
+  top: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 42px;
   height: 42px;
   background-color: #fff;
@@ -41,7 +49,7 @@
 }
 
 .slider__button--prev {
-  left: 1rem;
+  left: 18px;
 }
 
 .slider__button--prev svg {
@@ -49,12 +57,12 @@
 }
 
 .slider__button--next {
-  right: 1rem;
+  right: 18px;
 }
 
 .slider__list {
   display: flex;
-  gap: 1rem;
+  gap: 20px;
   margin-top: 1rem;
 }
 
@@ -64,8 +72,8 @@
 
 .slider__favorite {
   position: absolute;
-  right: 1rem;
-  bottom: 1rem;
+  right: 20px;
+  bottom: 20px;
 }
 
 .product__info {
@@ -78,7 +86,7 @@
 }
 
 .product__info h3[class$="-title"] {
-  margin-bottom: 6px;
+  margin-bottom: 12px;
   font-weight: 500;
 }
 
@@ -87,7 +95,7 @@
 .product__fittings,
 .product__size,
 .product__description {
-  margin-top: 28px;
+  margin-top: 24px;
 }
 
 .product__fabric-name,
@@ -99,7 +107,7 @@
 }
 
 .product__fabric {
-  margin-top: 20px;
+  margin-top: 28px;
 }
 
 .product__fabric-list {
@@ -124,7 +132,7 @@
 }
 
 .product__price {
-  margin-top: 38px;
+  margin-top: 32px;
 }
 
 .product__price-amount {
@@ -136,11 +144,16 @@
   margin-top: 0.5rem;
 }
 
+.product__description {
+  font-size: 16px;
+  text-align: 18px;
+}
+
 .product__details-list {
   display: grid;
   grid-template-columns: repeat(4, auto);
   gap: 1.4rem;
-  margin-top: 58px;
+  margin-top: 56px;
 }
 
 .product__details-list-item div {
