feat: add selected(favorites) page selected.html

--- a/index.css
+++ b/index.css
@@ -51,3 +51,5 @@
 @import './assets/css/tablesMedia.css';
 @import './assets/css/catalog.css';
 @import './assets/css/catalogMedia.css';
+@import './assets/css/selected.css';
+@import './assets/css/selectedMedia.css';
