--- a/assets/css/filter.css
+++ b/assets/css/filter.css
@@ -1,3 +1,5 @@
+
+
 .filter__container {
   padding: 30px 20px;
   max-width: 767px;
@@ -85,11 +87,11 @@ input {
   background-image: url(../img/svg/checked.svg);
 }
 
-.hide>.triangle-down {
+.hide>.triangle-down-filter {
   transform: rotate(-90deg)
 }
 
-.triangle-down {
+.triangle-down-filter {
   transform: rotate(0)
 }
 
