fix:change social links in menu

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -103,7 +103,9 @@ display: none;
   display: flex;
   justify-content: end;
 }
-
+.menu__footer > .footer__social-links{
+  align-self: flex-start;
+}
 .menu__footer .footer__social-link:last-child {
   display: none;
 }
